# OrcaFS-NeotkoCM

./: AGENTS.md  CHANGELOG_v0.3.md  CHANGELOG_v0.7.md  CHANGELOG_v0.8.md  CHANGELOG_v0.9.4.md  CHANGELOG_v0.9.md  CLAUDE.md  CMakeLists.txt  NEOTKO_FEATURES.md  README.md  RELEASE_NOTES_v0.9.3.md  RELEASE_NOTES_v0.92.md  WIKI.md  build_flatpak.sh  build_linux.sh  build_release.bat  build_release_macos.sh  build_release_macos_neotko.sh  build_release_vs2022.bat  dumpinfo.cs  version.inc
.github/workflows/: build.yml  build_all.yml  build_check_cache.yml  build_deps.yml  build_orca.yml  check_locale.yml  sentry_cli.yml
cmake/modules/: FindOpenVDB.cmake  MacOSXBundleInfo.plist.in
deps_src/nlohmann/: CMakeLists.txt
doc/developer-reference/: Acceleration_Correction.md  Axis_Component_Limits_Explained.md  How-to-create-profiles.md  Klipper_Real_Config_Analysis.md  Klipper_vs_OrcaSlicer_Velocity_Limits.md  Localization_guide.md  M109_M190_Preheat_Fix_Solution.md  Print_Time_Estimation_Analysis.md  Time_Estimation_Detailed_Answers.md  Time_Estimation_Supplementary_Analysis.md
docs/: U1_Filament_Compatibility_Fix.md  U1_Local_Z_Dithering_Design_Draft.md  U1_WipeTower_RibWall_Fix_Summary.md  WipeTower_OutOfBounds_Fix_Analysis.md  bbl_modifications.md  spiral_lift_boundary_warning.md  wipe_tower_brim_chamfer_implementation.md  机型切换耗材保持功能修复文档.md
localization/i18n/: Snapmaker_Orca.pot  list.txt
localization/i18n/ca/: Snapmaker_Orca_ca.po
localization/i18n/cs/: Snapmaker_Orca_cs.po
localization/i18n/de/: Snapmaker_Orca_de.po
localization/i18n/en/: Snapmaker_Orca_en.po
localization/i18n/es/: Snapmaker_Orca_es.po
localization/i18n/fr/: Snapmaker_Orca_fr.po
localization/i18n/hu/: Snapmaker_Orca_hu.po
localization/i18n/it/: Snapmaker_Orca_it.po
localization/i18n/ja/: Snapmaker_Orca_ja.po
localization/i18n/ko/: Snapmaker_Orca_ko.po
localization/i18n/lt/: Snapmaker_Orca_lt.po
localization/i18n/nl/: Snapmaker_Orca_nl.po
localization/i18n/pl/: Snapmaker_Orca_pl.po
localization/i18n/pt_BR/: Snapmaker_Orca_pt_BR.po
localization/i18n/ru/: Snapmaker_Orca_ru.po
localization/i18n/sv/: Snapmaker_Orca_sv.po
localization/i18n/tr/: Snapmaker_Orca_tr.po
localization/i18n/uk/: Snapmaker_Orca_uk.po
localization/i18n/zh_CN/: Snapmaker_Orca_zh_CN.po
localization/i18n/zh_TW/: Snapmaker_Orca_zh_TW.po
resources/i18n/ca/: Snapmaker_Orca.mo
resources/i18n/cs/: Snapmaker_Orca.mo
resources/i18n/de/: Snapmaker_Orca.mo
resources/i18n/en/: Snapmaker_Orca.mo
resources/i18n/es/: Snapmaker_Orca.mo
resources/i18n/fr/: Snapmaker_Orca.mo
resources/i18n/hu/: Snapmaker_Orca.mo
resources/i18n/it/: Snapmaker_Orca.mo
resources/i18n/ja/: Snapmaker_Orca.mo
resources/i18n/ko/: Snapmaker_Orca.mo
resources/i18n/lt/: Snapmaker_Orca.mo
resources/i18n/nl/: Snapmaker_Orca.mo
resources/i18n/pl/: Snapmaker_Orca.mo
resources/i18n/pt_BR/: Snapmaker_Orca.mo
resources/i18n/ru/: Snapmaker_Orca.mo
resources/profiles/: BBL.json  OrcaFilamentLibrary.json  Snapmaker.json
scripts/: Dockerfile  run_gettext.sh
scripts/flatpak/: entrypoint  io.github.Snapmaker.Snapmaker_Orca.metainfo.xml  io.github.Snapmaker.Snapmaker_Orca.yml  setup_env_ubuntu24.04.sh
src/: CMakeLists.txt  Snapmaker_Orca.cpp  Snapmaker_Orca_app_msvc.cpp
src/bury_cfg/: bury_point.cpp  bury_point.hpp
src/common_func/: common_func.cpp  common_func.hpp
src/dev-utils/: BaseException.h
src/dev-utils/platform/msw/: Snapmaker_Orca-gcodeviewer.rc.in  Snapmaker_Orca.rc.in
src/dev-utils/platform/osx/: Info.plist.in
src/dev-utils/platform/unix/: build_appimage.sh.in  build_linux_image.sh.in
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  Config.cpp  Config.hpp  CustomGCode.cpp  CustomGCode.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  GCode.cpp  GCode.hpp  Layer.hpp  LayerRegion.cpp  LocalZOrderOptimizer.hpp  MULTIPASSBUGRATIO_SurfaceColorMix.cpp  MixedFilament.cpp  MixedFilament.hpp  Model.cpp  Model.hpp  MultiMaterialSegmentation.cpp  PREtest2GCode.cpp  PlaceholderParser.cpp  Preset.cpp  Preset.hpp  PresetBundle.cpp  PresetBundle.hpp  Print.cpp  Print.hpp  PrintApply.cpp  PrintBase.cpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  PrintObjectSlice.cpp  PrintRegion.cpp  Surface.hpp  SurfaceColorMix.cpp  SurfaceColorMix.hpp  TEMPMOD_GCode.cpp  TEMPORAL-Print.cpp  (+7 more)
src/libslic3r/Fill/: Fill.cpp  FillBase.cpp  FillBase.hpp  FillRectilinear.cpp
src/libslic3r/Format/: 3mf.cpp  S3DFactory.cpp  S3DFactory.hpp  bbs_3mf.cpp
src/libslic3r/GCode/: AdaptivePAProcessor.cpp  GCodeProcessor.cpp  GCodeProcessor.hpp  ToolOrdering.cpp  ToolOrdering.hpp  WipeTower.cpp  WipeTower2.cpp  WipeTower2.hpp
src/mqtt/: CMakeLists.txt
src/sentry_wrapper/: SentryWrapper.cpp  SentryWrapper.hpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: 3DScene.cpp  3DScene.hpp  AboutDialog.cpp  AmsMappingPopup.cpp  BindDialog.cpp  BonjourDialog.cpp  Calibration.cpp  ConfigManipulation.cpp  ConfigWizard.cpp  CreatePresetsDialog.cpp  DesktopIntegrationDialog.cpp  Downloader.cpp  GCodeViewer.cpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GUI.cpp  GUI.hpp  GUI_App.cpp  GUI_App.hpp  GUI_Factories.cpp  GUI_Factories.hpp  GUI_ObjectList.cpp  GUI_ObjectList.hpp  GUI_ObjectTable.cpp  HttpServer.cpp  HttpServer.hpp  KBShortcutsDialog.cpp  MainFrame.cpp  MainFrame.hpp  MarkdownTip.cpp  MediaFilePanel.cpp  MediaPlayCtrl.cpp  ModelMall.cpp  MsgDialog.cpp  NetworkTestDialog.cpp  NetworkTestDialog.hpp  OG_CustomCtrl.cpp  OG_CustomCtrl.hpp  ObjColorDialog.cpp  ObjColorDialog.hpp  (+55 more)
src/slic3r/GUI/Gizmos/: GLGizmoMmuSegmentation.cpp  GLGizmoMmuSegmentation.hpp  GLGizmoPainterBase.cpp  GLGizmosManager.cpp
src/slic3r/GUI/Widgets/: WebView.cpp
src/slic3r/Utils/: Bonjour.cpp  Bonjour.hpp  Http.cpp  Http.hpp  InstanceID.cpp  MQTT.cpp  MQTT.hpp  MoonRaker.cpp  MoonRaker.hpp  NetworkAgent.cpp  PresetUpdater.cpp  PresetUpdater.hpp  PrintHost.cpp  PrintHost.hpp
tests/libslic3r/: CMakeLists.txt  test_custom_gcode.cpp  test_local_z_order_optimizer.cpp  test_mixed_filament.cpp  test_triangle_selector.cpp
tests/slic3rutils/: CMakeLists.txt
(+166 files in other folders)
